src/App.css
@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@400;500;600;700&display=swap');

:root {
  background: radial-gradient(#2B2622, #120F0C);
}

.App {
  font-family: 'Cinzel', serif;
  letter-spacing: 3px;
  font-size: 2rem;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-image: url(./assets/eldenringlogo.png);
  background-repeat: no-repeat;
  background-position: center;
}
.overlay {
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: rgb(0,0,0,.6);
  z-index: 0
}

h1, button, #undo {
  z-index: 1;
}

h1 {
  background-image: linear-gradient(#C4A366,  #E5CAAA);
  background-clip: text;
  color: transparent;
  font-weight: 600;
  text-align: center;
}

button {
  width: clamp(2rem, 33%, 11em);
  height: 4.5rem; 
  border-radius: 5px;
  background-color: rgba(162, 156, 125, .2);
  border: 3px solid #b3aea6;
  color: white;
  font-family: 'Cinzel', serif;
  font-size: 1.5rem;
  font-weight: 500;
  margin: 0 0 50px;
  transition: .2s ease-in-out;
  font-weight: 700;
  letter-spacing: 1px;

}

button:hover {
  cursor: pointer;
  background-color: rgba(20, 17, 8, .8);
  color: rgb(235, 0, 0);
}

#undo-reset-container {
  color: white;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 1;
}

#undo, #reset, #vr {
  transition: .2s ease-in-out;
  font-size: 1.2rem;
  font-weight: 500;
}

#undo:hover, #reset:hover {
  cursor: pointer;
  color: #E5CAAA;
}

